Sanitize filenames more